minor fix text center align on input

--- a/app_front/app/stylesheets/customer/components/_product-select.sass
+++ b/app_front/app/stylesheets/customer/components/_product-select.sass
@@ -14,6 +14,7 @@
     float: left
     height: 2.5em
     vertical-align: top
+    text-align: center
 
   +part(dropdown)
     margin-bottom: 1em
